@startuml Harmonia-DomainModel
' Domain model for Harmonia — music analysis & library platform
' Source of truth: backend/models/models.py (SQLAlchemy).
' Legend: <<PK>> primary key, <<FK>> foreign key, <<U>> unique, (?) nullable.

title Harmonia — Domain Model

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam class {
  BackgroundColor #FDFDFD
  BorderColor #444444
  ArrowColor #666666
}
hide circle

class User {
  +id : int <<PK>>
  +username : str <<U>>
  +password_hash : str
  +created_at : datetime
}

class Track {
  +id : int <<PK>>
  +title : str
  +artist : str (?)
  +album : str (?)
  +file_path : str
  +artwork_path : str (?)
  +duration : float (?)
  +uploaded_at : datetime
  +user_id : int <<FK>> (?)
}

class Analysis {
  +id : int <<PK>>
  +track_id : int <<FK>> (?)
  +bpm : float (?)
  +key : str (?)
  +scale : str (?)
  +energy : float (?)
  +danceability : float (?)
  +analyzed_at : datetime
}

class Playlist {
  +id : int <<PK>>
  +name : str
  +user_id : int <<FK>> (?)
  +share_token : str <<U>> (?)
  +created_at : datetime
}

class PlaylistTrack {
  +id : int <<PK>>
  +playlist_id : int <<FK>> (?)
  +track_id : int <<FK>> (?)
  +position : int
}

' ---- Relationships ----
User "1" --> "0..*" Track          : owns
Track "1" --> "0..1" Analysis      : analyzed by
User "1" --> "0..*" Playlist       : owns
Playlist "1" *--> "0..*" PlaylistTrack : ordered entries
Track "1" --> "0..*" PlaylistTrack : appears in

' Derived many-to-many (through PlaylistTrack, ordered by position)
Playlist "0..*" ..> "0..*" Track   : contains (via PlaylistTrack)

@enduml
